Primeiro commit do projeto Carteira

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="blue">#077DE2</color>
     <color name="cinza">#DFDFDF</color>
     <color name="red">#E61E0F</color>
+    <color name="green">#2FAD03</color>
 </resources>
